# microserve

./: docker-compose.yml
.github/workflows/: ci-cd.yml
k9s/apps/: iac-python.yaml  web.yaml
k9s/db/: postgres-db.yaml  redis-db.yaml
k9s/nginx/: deployment.yaml
web/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  migrate.sh  pyproject.toml
web/config/: settings.py  wsgi.py
