[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.34",
    "django>=6.0.1",
    "django-dotenv>=1.4.2",
    "django-storages>=1.14.6",
    "gunicorn>=24.1.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]
